# opencv-contours-receipt

./: .gitignore  .pdm-python  README.md  main.ipynb  project.py  pyproject.toml  pyvenv.cfg  requirements.txt  test_project.py
Scripts/: activate  activate.bat  activate.fish  activate.nu
app/: main.ipynb  main.py
